<resources>
    <string name="app_name">My Application1</string>
    <string name="name">名字:</string>
    <string name="null_name">NULL_name</string>
    <string name="time">時間:</string>
    <string name="null_time">NULL_time</string>
    <string name="place">地點:</string>
    <string name="null_place">NULL_place</string>
    <string name="dog_auto_feed">Dog Auto Feed</string>
    <string name="exit_programe">Exit programe</string>
    <string name="exit_title">Exit Programe?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_cancel">Cancel</string>
    <string name="member_email">Member Email</string>
    <string name="member_password">Member Password</string>
    <string name="member_login">LOGIN</string>
    <string name="member_register">Register</string>
    <string name="member_login_title">Member Login</string>

    <item name="visible" type="id" />
    /* 為了解決typeInPutLayout的Couldn't resolve resource @id/visible */
    <item name="masked" type="id" />
    /* 為了解決typeInPutLayout的Couldn't resolve resource @id/visible */

</resources>
